@@ -2,6 +2,7 @@ package strongdmm.service.preferences
 
 import com.fasterxml.jackson.annotation.JsonIgnore
 import strongdmm.service.preferences.prefs.Preference
+import strongdmm.service.preferences.prefs.bools.AlternativeScrollBehavior
 import strongdmm.service.preferences.prefs.bools.CleanUnusedKeys
 import strongdmm.service.preferences.prefs.bools.SanitizeInitialVariables
 import strongdmm.service.preferences.prefs.enums.MapSaveMode
@@ -14,12 +15,15 @@ class Preferences {
     var rawValues: List<Preference<Any>> = emptyList()
 
     // Interface Options
-    val interfaceScalePercent: InterfaceScalePercent = InterfaceScalePercent()
-    val styleMode: StyleMode = StyleMode()
+    val interfaceScalePercent = InterfaceScalePercent()
+    val styleMode = StyleMode()
+
+    // Controls Options
+    val alternativeScrollBehavior = AlternativeScrollBehavior()
 
     // Save Options
-    val mapSaveMode: MapSaveMode = MapSaveMode()
-    val sanitizeInitialVariables: SanitizeInitialVariables = SanitizeInitialVariables()
-    val cleanUnusedKeys: CleanUnusedKeys = CleanUnusedKeys()
-    val nudgeMode: NudgeMode = NudgeMode()
+    val mapSaveMode = MapSaveMode()
+    val sanitizeInitialVariables = SanitizeInitialVariables()
+    val cleanUnusedKeys = CleanUnusedKeys()
+    val nudgeMode = NudgeMode()
 }
